# enigma_MEG

./: .gitignore  .gitmodules  MANIFEST.in  ParcelStatsModel.ipynb  README.md  UNLICENSE  config.txt  enigma.def  get_test_data.py  makefile  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup_headless_rendering.sh  setup_test_config.sh
conda/: README.md  meta.yaml
container/: README.md  condastartup.sh  enigma_meg.def  enigma_meg.yml
enigmeg/: enigmeg_prepare_input_datasets.py  ica_cleaning.py  mod_label_extract.py  parse_bids.py  process_anatomical.py  process_meg.py  spectral_peak_analysis.py  utils.py
enigmeg/QA/: ImageSelectorGui.py  QA_functions.py  Run_enigma_QA_GUI.py  assess_proc_data.py  enigma_QA_GUI_functions.py  enigma_QA_functions.py  enigma_parseQAlogs.py  enigma_prep_QA.py  make_ica_qa.py  prepare_QA.py
enigmeg/QA/tests/: enigma_QA_logfile.txt  test_ImageSelectorGui.py
enigmeg/group/: calc_display_stats.py  compile_alpha_histplots.py  compile_group_results.py  demographics_OHBM_abstract.py  display_surface_regression.py  parse_OHMB_abstract_data.py
enigmeg/simulation/: simulate_meg_data.py  simulate_sine_plus_real.py
enigmeg/simulation/tests/: _test_simulation.py  test_simulation.py
enigmeg/test/: ParsedBIDS_dataframe_multi.csv  _test_loop_process_file.py  _test_process_anatomical.py  get_test_datasets.py  test_loop_process_file.py  test_multivendor.py  test_process_anatomical.py  test_process_meg.py
extras/: Compare_ICA_Removal.py  copy_enigma_tree.py  enigma.def  eo_to_continuous.py  hcp_process_meg.py  lcmv_airpuff_evoked.py  mrilab_transform_converter.py  process_meg_hcp.py
extras/CAMCAN/: Config_swarm.sh  calc_camcan_transfile.py  reorganize_camcan_dsets.py
extras/HCP_age/: convert_to_bids.py  make_swarmfile.sh  swarm_EO.sh
extras/OMEGA/: OMEGA_rest_sets.csv  add_hs.py  make_swarm_file.py  pick_first_rest_dset.py
python_code/: compile_alpha_histplots.py  display_surface_regression.py  ica_cleaning.py  load_data.py  process_anatomical.py  process_meg.py  spectral_peak_analysis.py
python_code/CAMCAN/: calc_camcan_transfile.py  reorganize_camcan_dsets.py
python_code/group/: ParcelStatsModel.ipynb
python_code/simulation/: simulate_meg_data.py
python_code/test/: test_load_data.py  test_process_anatomical.py  test_process_meg.py
